Java11 version fixed and warnings fixed
git-svn-id: svn://svn.code.sf.net/p/jsidplay2/code/trunk@2383 05cac4c1-a8e4-46c3-9d4b-80028926d4ef